# rust-restful-boilerplate

./: Cargo.toml  README.md
src/: main.rs
src/api/: account.rs  auth.rs  code.rs  middleware.rs  mod.rs  ping.rs  state.rs
src/middleware/: request_id.rs
